--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -168,7 +168,7 @@
             <div class="p-1 bg-white rounded shadow-sm" style="padding-left: 10px;padding-right: 10px">
                 <div class="d-flex justify-content-between">
                   <div class="d-flex text-muted pt-3">
-                    <%= image_tag "/user_images/default_icon.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
+                    <%= image_tag "profiles.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
                     <p class="pb-3 mb-0 small lh-sm w-100">
                       <strong class="d-block text-gray-dark">アニメ愛好家</strong>
                       アニメ好き集まれ～
@@ -199,7 +199,7 @@
             <div class="p-1 bg-white rounded shadow-sm" style="padding-left: 10px;padding-right: 10px">
                 <div class="d-flex justify-content-between">
                   <div class="d-flex text-muted pt-3">
-                    <%= image_tag "/user_images/default_icon.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
+                    <%= image_tag "profiles.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
                     <p class="pb-3 mb-0 small lh-sm w-100">
                       <strong class="d-block text-gray-dark">アニメ愛好家</strong>
                       アニメ好き集まれ～
@@ -215,7 +215,7 @@
       <div class="p-1 bg-white rounded shadow-sm" style="padding-left: 10px;padding-right: 10px">
       <div class="d-flex justify-content-between">
         <div class="d-flex text-muted pt-3">
-          <%= image_tag "/user_images/default_icon.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
+          <%= image_tag "profile.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
           <p class="pb-3 mb-0 small lh-sm w-100">
             <strong class="d-block text-gray-dark">IT勉強会</strong>
             一緒に極めよう
