メンバーの参加作成途中

--- a/app/assets/stylesheets/communities.scss
+++ b/app/assets/stylesheets/communities.scss
@@ -136,7 +136,7 @@ ul.tagit input[type="text"] {
 .tagit-autocomplete .ui-state-active  { border: 1px solid #aaaaaa; }
 
 .tagit-autocomplete .ui-widget-content { border: 1px solid #aaaaaa; }
-.tagit .ui-helper-hidden-accessible { display: none}
+.ui-helper-hidden-accessible { display: none}
 
 .icon{
   width: 200px;
