--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -27,7 +27,7 @@
                 <% end %>
                 <% tag_count =  community.tag_list.count%>
                 <% while tag_count < 3 do%>
-                  <li class="list-group-item">ㅤ</li>
+                  <li class="list-group-item">－</li>
                   <% tag_count += 1 %>
                 <% end %>
               </ul>
