アイコン切り抜き機能の実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,9 @@
       <% if user_signed_in? %>
         <%= link_to  pages_path ,class: "link" do%>
           <% if current_user.image.nil? %>
-            <%= image_tag "/user_images/default_icon.png" , class: "user_icon" %>
+            <%= image_tag "default_icon" , class: "user_icon"  %>
           <% else %>
-            <%= image_tag "/user_images/#{current_user.image}",class: "user_icon"%>
+            <img src="<%= current_user.image %>"class="user_icon">
           <% end %>
         <% end %>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
