アイコン切り抜き機能実装

--- a/app/views/mypages/edit.html.erb
+++ b/app/views/mypages/edit.html.erb
@@ -56,7 +56,7 @@
       <td><canvas id="source_canvas" width="1" height="1"></canvas></td>
     </div>
     <div class="modal-footer">
-    <button type="button" id="close_button" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
+    <button type="button" id="close_button" class="btn btn-primary" data-bs-dismiss="modal">画像を切り取る</button>
     </div>
   </div>
 </div>
@@ -87,6 +87,7 @@
             <label>
               <button type="button" class="btn btn-primary disp_none" data-bs-toggle="modal" data-bs-target="#exampleModal"></button>
               <canvas id="cropped_canvas" style="display:none;width: 200px;height: 200px;"></canvas>
+              <img src="" id="result-img" style="display:none;width: 200px;height: 200px;">
             </label>
 
           </div>
