ユーザーがコミュニティに参加できるように

--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -9,7 +9,11 @@
       <% end %>
       <h1 class="display-4 fw-normal"><%=@community.name %></h1>
       <p class="lead fw-normal"><%=safe_join(@community.content.split("\n"),tag(:br)) %></p>
-      <a class="btn btn-outline-dark" href="#">参加</a>
+      <% if @join %>
+        <%=  link_to "退出" , community_manage_path(@community.id,current_user.id), method: :delete,class: "btn btn-outline-dark"  %>
+      <%  else  %>
+        <%= link_to "参加", community_manage_index_path(@community.id), method: :post, class: "btn btn-outline-dark" %>
+      <% end %>
     </div>
   </div>
 
@@ -17,7 +21,14 @@
     <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white">
       <div class="my-3 py-3">
         <h2 class="display-5">参加者</h2>
-        <p class="lead" >橋本環奈、本田翼</p>
+        <%= link_to "リーダー : #{@user.find(@community.user_id).name}" ,profile_path(@user.find(@community.user_id).userid),class: "lead text-white",style: "text-decoration:none;"%>
+        <br />
+        <% @members.shuffle.first(5).each do |m| %>
+          <% unless @user.find(@community.user_id) == @user.find(m.user_id)%>
+            <%= link_to "#{@user.find(m.user_id).name}" ,profile_path(@user.find(m.user_id).userid),class: "lead text-white",style: "text-decoration:none;"%>
+            <br />
+          <% end %>
+        <% end %>
       </div>
     </div>
 
