--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -1,11 +1,20 @@
 <%= stylesheet_link_tag 'communities', media: 'all', 'data-turbolinks-track': 'reload' %>
-<h1>コミュニティ</h1>
-<div class="btn-horizontal-border">
-  <p>
-    <%=link_to "コミュニティ新規作成",new_community_path%>
-  </p>
-</div>
 <div class="container">
+  <div class="d-flex align-items-center p-3 my-3 text-dark bg-blue rounded shadow-sm">
+    <div class="lh-1">
+      <nav class="navbar">
+        <%= form_with url: profile_search_path,:method => 'get',class: "container-fluid" do |f| %>
+          <p class="me-3">コミュニティを検索</p>
+          <div class="input-group">
+            <%= f.text_field :name, class: "form-control",placeholder: "コミュニティ名、タグ、id等...",aria: {label:"Username",describedby: "basic-addon1"}%>
+          </div>
+          <%=link_to "コミュニティ新規作成",new_community_path,class:"btn btn-primary mt-3"%>
+        <% end %>
+
+
+      </nav>
+    </div>
+  </div>
   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4  g-lg-4">
     <% @community.each do |community| %>
       <%= link_to community_path(community.id), style: "text-decoration: none" do %>
