--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -99,8 +99,10 @@
 </header>
 <!-- ここに追加 -->
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<div class="flash">
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+</div>
 <%= yield %>
 </body>
 
