--- a/app/views/communities/edit.html.erb
+++ b/app/views/communities/edit.html.erb
@@ -1,53 +1,59 @@
-<main>
-  <div class="py-5 text-center">
-    <%= image_tag "/communities_image/#{@community.icon}",class: "img-fluid" ,width: 100,height: 100 %>
-    <h2><%= @community.name %></h2>
-    <p class="lead"></p>
-  </div>
+<%= stylesheet_link_tag 'communities', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= javascript_pack_tag "communities/new" %>
+<script>
+    $(document).ready(function () {
+        $('#myTags').tagit({
+            tagLimit: 20,
+            placeholderText: 'タグは20個までです',
+            singleField: true,
+            availableTags: <%= raw @all_tag_list %>
+        });
+    });
+</script>
 
-  <div class="row g-3">
-    <h4 class="mb-3">コミュニティ編集</h4>
-    <%= form_for(@community, url: community_path,method: :put, multipart: true ,class: "need-validation") do |f| %>
-      <div class="row g-12">
-        <div class="col-sm-6">
-          <%= f.label "コミュニティ名" , class: "form-label" %><br>
-          <%= f.text_field :name, autocomplete: "name", class: "input"%>
-          <div class="invalid-feedback">
-            Valid first name is required.
+<div class="container">
+  <%= form_for(@community, url: community_path,method: "put", multipart: true,class: "needs-validation") do |f| %>
+    <main>
+      <div class="py-5 text-center">
+        <h2>コミュニティ編集</h2>
+        <%= render 'layouts/error_messages', model: f.object %>
+        <div class="uploader">
+          <div class="form1">
+            <label>
+              <%= image_tag "default_icon" ,id:"preview",class: "d-block mx-auto mb-4 border border-success rounded icon"%>
+            </label><br /><br />
           </div>
         </div>
       </div>
+      <div class="col-md-12 col-lg-12">
+        <div class="row g-3">
+          <div class="col-sm-12">
+            <%= f.label "コミュニティ名", class:"form-label"%>
+            <%= f.text_field :name, autocomplete: "name", class: "form-control" ,:placeholder=>"コミュニティ名"%>
+          </div>
 
-      <div class="col-12">
-        <%= f.label "概要" , class: "form-label" %>
-        <%= f.text_area :content, autocomplete: "content",class:"form-control",id:"content"%>
-      </div>
+          <div class="col-sm-12">
+            <%= f.label "概要", class:"form-label"%>
+            <%= f.text_area :content, autocomplete: "content", class: "form-control",style:"height:100px" ,:placeholder=>"概要"%>
+          </div>
 
-      <%= f.label "アイコンの設定" %><br>
-      <%= f.file_field :icon,autocomplete: "icon", class: "input",:placeholder=>"icon",style: "width: 260px"%>
+          <div class="col-sm-12">
+            <%= f.label "アイコン", class:"form-label"%>
+            <%= f.file_field :icon,autocomplete: "icon", class: "form-control",:placeholder=>"icon",onchange: "previewImage(this);"%>
+          </div>
 
-      <%= form_with(url:community_tag_path(@community.id), :action=> "post") do |f_tag|%>
-        <div class="col-12">
-          <%= f_tag.label "タグ" , class: "form-label" %>
-
-          <div class="row g-12">
-            <div class="col-2">
-              <%= f_tag.text_field :tag, autocomplete: "tag",class:"form-control",id:"tag",style: "width:230px"%>
-            </div>
-            <div class="col-3">
-              <%= f_tag.submit "タグの追加" ,class:" btn btn-primary ",style:"height:40px"%>
+          <div class="col-sm-12">
+            <div class="search-area-colum form-contents">
+              <%= f.label "タグ (1つ2~20文字)" , class:"form-label"%>
+              <%= f.text_field :tag_list, id:"myTags",value: @tag%>
             </div>
           </div>
+
+          <div class="col-sm-12 text-center">
+            <%= f.submit "更新", class:"w-50 btn btn-primary btn-lg mb-4"%>
+          </div>
         </div>
-        <div class="tags">
-          <% @tag.each do |t|%>
-            <%= t.tag %>
-          <% end %>
-        </div>
-      <% end %>
-      <div class="my-3 text-center">
-        <%= f.submit "変更", class:"w-50 btn btn-primary btn-lg"%>
       </div>
-    <% end %>
-  </div>
-</main>
+    </main>
+  <% end %>
+</div>
