--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -9,11 +9,16 @@
       <% end %>
       <h1 class="display-4 fw-normal"><%=@community.name %></h1>
       <p class="lead fw-normal"><%=safe_join(@community.content.split("\n"),tag(:br)) %></p>
-      <% if @join %>
-        <%=  link_to "退出" , community_manage_path(@community.id,current_user.id), method: :delete,class: "btn btn-outline-dark"  %>
-      <%  else  %>
-        <%= link_to "参加", community_manage_index_path(@community.id), method: :post, class: "btn btn-outline-dark" %>
+      <% if @leader %>
+        <%=  link_to "編集", edit_community_path,class: "btn btn-outline-dark" %>
+      <% else %>
+        <% if @join %>
+          <%=  link_to "退出" , community_manage_path(@community.id,current_user.id), method: :delete,class: "btn btn-outline-dark"  %>
+        <%  else  %>
+          <%= link_to "参加", community_manage_index_path(@community.id), method: :post, class: "btn btn-outline-dark" %>
+        <% end %>
       <% end %>
+
     </div>
   </div>
 
