--- a/app/views/communities/edit.html.erb
+++ b/app/views/communities/edit.html.erb
@@ -17,7 +17,7 @@
       <div class="py-5 text-center">
         <h2>コミュニティ編集</h2>
         <%= render 'layouts/error_messages', model: f.object %>
-        <div class="uploader">
+        <div class="uploader mt-4">
           <div class="form1">
             <label>
               <%= image_tag "default_icon" ,id:"preview",class: "d-block mx-auto mb-4 border border-success rounded icon"%>
@@ -52,6 +52,10 @@
           <div class="col-sm-12 text-center">
             <%= f.submit "更新", class:"w-50 btn btn-primary btn-lg mb-4"%>
           </div>
+        </div>
+
+        <div class="col-sm-12 text-center mt-5">
+          <h2>DANGER ZONE</h2>
         </div>
       </div>
     </main>
