--- a/public/error.css
+++ b/public/error.css
@@ -4,12 +4,19 @@ HTML, BODY {
 BODY {
     background: #082330;
     background-size: 0.12em 100%;
+
     font: 16em/1 Arial;
 }
+
 .text--line {
+
     font-size: 0.5em;
 }
+
 svg {
+    background-image: url("error2.png");
+    background-repeat: no-repeat;
+    background-position: center;
     position: absolute;
     width: 100%;
     height: 100%;
