--- a/app/views/communities/joined.js.erb
+++ b/app/views/communities/joined.js.erb
@@ -1,5 +1,5 @@
 var communities = $("#community")
 communities.empty()
 <% @community.each do |c|%>
-  communities.append("<%= j(render 'communities/community', community:c,user: @user) %>");
+  communities.append("<%= j(render 'communities/community', community:c,user: @user,member:@member) %>");
 <% end %>
