--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,15 @@
 <header class="w-auto">
   <nav class="navbar navbar-expand-lg navbar-light p-0 m-0" id="main-nav">
     <div class="container-fluid">
+      <!--
       <% if user_signed_in? %>
+        <%= link_to  pages_path ,class: "link" do%>
+          <% if current_user.image.nil? %>
+            <%= image_tag "/user_images/default_icon.png" , class: "user_icon" %>
+          <% else %>
+            <%= image_tag "/user_images/#{current_user.image}",class: "user_icon"%>
+          <% end %>
+        <% end %>-->
         <%= link_to pages_path,class: "link" do%>
           <%= image_tag "/user_images/default_icon.png",class:"amica_icon" %>
         <% end %>
@@ -29,13 +37,12 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <!--<p class="mb-0 small lh-sm" style="margin-left:7px">
+            <strong class="d-block text-gray-dark"><%= current_user.name %> (<%= current_user.nickname %>)</strong>
+            @<%= current_user.userid %>
+          </p>-->
           <div class="navbar-nav me-auto m-0 mb-lg-0"></div>
           <ul class="navbar-nav d-flex">
-            <li class="nav-item">
-              <%= link_to pages_path,class: "icons nav-link" do%>
-                <i class="fas fa-bell"></i>通知<span class="notice badge bg-light text-dark rounded-pill align-text-bottom">100</span>
-              <% end %>
-            </li>
             <li class="nav-item">
               <%= link_to  chats_path,class: "icons nav-link" do %>
                 <i class="fas fa-comments"></i>チャット
@@ -56,8 +63,7 @@
                 <i class="fas fa-address-card"></i>友達
               <% end %>
             </li>
-
-            <li class="nav-item dropdown d-flex" >
+            <li class="nav-item dropdown d-flex">
               <a class="nav-link dropdown-toggle icons" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="fas fa-box-open"></i>その他
               </a>
@@ -84,6 +90,7 @@
           </ul>
         </div>
       <% else %>
+        <%= image_tag "default_icon.png" , class: "user_icon" %>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -101,11 +108,9 @@
       <% end %>
     </div>
   </nav>
-  <% if user_signed_in? %>
-    <nav id="sub-nav" style="background-color: #666666;height: 30px">
-      <p style="color: white;margin-left: 12px"><%=current_user.name %> (@<%=current_user.userid%>) </p>
-    </nav>
-   <% end %>
+  <nav id="sub-nav" style="background-color: #666666;height: 30px">
+    <p style="color: white;margin-left: 12px"><%=current_user.name %> (@<%=current_user.userid%>) </p>
+  </nav>
 </header>
 <main>
 <!-- ここに追加 -->
