--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,6 +54,14 @@ header{
   border-color: rgba(29,144,190,0.8);
 }
 
+#main-nav svg{
+  margin-right: 3px;
+}
+
+.notice{
+  font-family: 'Kiwi Maru', serif;
+}
+
 .box{
   display: inline-block;
 }
