--- a/app/views/devise/confirmations/show.html.erb
+++ b/app/views/devise/confirmations/show.html.erb
@@ -12,8 +12,8 @@
         <div class="col-md-12">
           <div class="row g-3">
             <div class="col-sm-6">
-              <%= f.label "本名", class:"form-label" %>
-              <%= f.text_field :name, class:"form-control" ,id:"name",placeholder: "Name"%>
+              <%= f.label "本名(2~20文字)", class:"form-label" %>
+              <%= f.text_field :name, class:"form-control" ,id:"name",placeholder: "Name",maxlength:"20"%>
             </div>
             <div class="col-sm-6">
               <%= f.label "ニックネーム(2~20文字)" , class:"form-label"%>
@@ -21,7 +21,7 @@
             </div>
 
             <div class="col-12">
-              <%= f.label "ユーザーID(1~20文字)", class:"form-label" %>
+              <%= f.label "ユーザーID(先頭のみ英語 半角英数字(_) 1~20文字)", class:"form-label" %>
               <div class="input-group">
                 <span class="input-group-text">@</span>
                 <%= f.text_field :userid ,class:"form-control",id:"userid",placeholder: "UserID" ,maxlength:"20"%>
