メールの内容を大幅変更

--- a/app/views/devise/mailer/email_changed.html.erb
+++ b/app/views/devise/mailer/email_changed.html.erb
@@ -1,12 +1,24 @@
-<p>こんにちは!<%= @email %>さん!</p>
+<h1><%=ENV["APP_NAME"] %></h1>
 
+<p>※このメールは自動送信メールです。</p>
+
+<h2><%= @email %>様</h2>
+
+<p>「<%= ENV['APP_NAME'] %>」運営の「<%= ENV['DEVELOPMENT_GROUP'] %>」です。</p>
+<br/>
 <% if @resource.try(:unconfirmed_email?) %>
-  <p>メールアドレスが<%= @resource.unconfirmed_email %>に変更されます。</p>
+  <p>ご登録のメールアドレスが<%= @resource.unconfirmed_email %>に変更されたことをお知らせします。</p>
 <% else %>
-  <p>メールアドレスが<%= @resource.email %>に変更されました。</p>
+  <p>ご登録のメールアドレスが<%= @resource.email %>に変更されたことをお知らせします。</p>
 <% end %>
-
--------------------------------------------
-AvailsGroup
-email : avails2022@gmail.com
--------------------------------------------
+<br/>
+<p>※このメールは送信専用です。お問い合わせはサイト内のお問い合わせからお願いします。</p>
+<p>※このメールが身に覚えがない場合は、アカウントが乗っ取られている可能性がありますので、お手数ですがサイト内からお問い合わせをお願いします。</p>
+<br />
+<br />
+<p>-------------------------------------------</p>
+<p><%=ENV["APP_NAME"] %></p>
+<p><%=ENV["URL"] %></p>
+<p><%=ENV["DEVELOPMENT_GROUP"] %></p>
+<p>Email : <%=ENV["EMAIL"] %></p>
+<p>-------------------------------------------</p>
