--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,21 @@
-<p>こんにちは <%= @resource.email %>さん。</p>
+<h1><%=ENV["APP_NAME"] %></h1>
 
-<p>パスワードが変更された事をご連絡いたします。</p>
+<p>※このメールは自動送信メールです。</p>
+
+<h2><%= @email %>様</h2>
+
+<p>「<%= ENV['APP_NAME'] %>」運営の「<%= ENV['DEVELOPMENT_GROUP'] %>」です。</p>
+<br/>
+<p>パスワードが変更されたことをお知らせいたします。</p>
+<p>今後とも<%=ENV["APP_NAME"] %>をよろしくお願いいたします。</p>
+<br/>
+<p>※このメールは送信専用です。お問い合わせはサイト内のお問い合わせからお願いします。</p>
+<p>※このメールが身に覚えがない場合は、アカウントが乗っ取られている可能性がありますので、お手数ですがサイト内からお問い合わせをお願いします。</p>
+<br />
+<br />
+<p>-------------------------------------------</p>
+<p><%=ENV["APP_NAME"] %></p>
+<p><%=ENV["URL"] %></p>
+<p><%=ENV["DEVELOPMENT_GROUP"] %></p>
+<p>Email : <%=ENV["EMAIL"] %></p>
+<p>-------------------------------------------</p>
