--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,14 +1,24 @@
-<p>こんにちは!<%= @resource.email %>さん!</p>
+<h1><%=ENV["APP_NAME"] %></h1>
 
-<p>パスワードを変更のリンクを要求されます。以下のリンクから変更してください。</p>
+<p>※このメールは自動送信メールです。</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<h2><%= @email %>様</h2>
 
-<p>※これをリクエストしなかった場合は、このメールを無視してください。</p>
+<p>「<%= ENV['APP_NAME'] %>」運営の「<%= ENV['DEVELOPMENT_GROUP'] %>」です。</p>
+<br/>
+<p>パスワードは以下のリンクから変更してください。</p>
+<br/>
+<p><%= link_to 'パスワードを変更する', edit_password_url(@resource, reset_password_token: @token) %></p>
+<br/>
+<p>※URLの有効期限は3時間です。</p>
+<p>※このメールは送信専用です。お問い合わせはサイト内のお問い合わせからお願いします。</p>
 <p>※上記のリンクにアクセスして新しいパスワードを作成するまで、パスワードは変更されません。</p>
-
--------------------------------------------
-AvailsGroup
-email : avails2022@gmail.com
--------------------------------------------
-
+<p>※このメールが身に覚えがない場合は、アカウントが乗っ取られている可能性がありますので、お手数ですがサイト内からお問い合わせをお願いします。</p>
+<br />
+<br />
+<p>-------------------------------------------</p>
+<p><%=ENV["APP_NAME"] %></p>
+<p><%=ENV["URL"] %></p>
+<p><%=ENV["DEVELOPMENT_GROUP"] %></p>
+<p>Email : <%=ENV["EMAIL"] %></p>
+<p>-------------------------------------------</p>
