mypagesとprofilesを統合、Cropper関連のバグを修正

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -43,36 +43,36 @@
                 <small>学籍番号</small> </h3>
             </li>
           </ul>
-          <button class="btn btn-primary followbtn">
-            <% if current_user.id != @user.id %>
-              <% unless current_user.following?(@user) %>
-                <div class="actions ">
-                  <%= link_to 'フォロー',
-                              profile_relationships_path(@user.userid),
-                              method: :post,
-                              style: "color:#FFF;"
-                  %>
-                </div>
-              <% else %>
-                <div class="actions">
-                  <%= link_to 'フォロー解除',
-                              profile_relationship_path(@user.userid),
-                              method: :delete,
-                              style: "color:#FFF;"
-                  %>
-                </div>
-              <% end %>
-            <% end %>
-           <% if current_user.id == @user.id %>
+          <% if current_user.id != @user.id %>
+            <% unless current_user.following?(@user) %>
+              <div class="actions ">
+                <%= link_to 'フォロー',
+                            profile_relationships_path(@user.userid),
+                            method: :post,
+                            style: "color:#FFF;",
+                            class:"btn btn-primary followbtn"
+                %>
+              </div>
+            <% else %>
               <div class="actions">
-                <%= link_to '編集',
-                            edit_mypage_path,
-                            style: "color:#FFF;"
-
+                <%= link_to 'フォロー解除',
+                            profile_relationship_path(@user.userid),
+                            method: :delete,
+                            style: "color:#FFF;",
+                            class:"btn btn-primary followbtn"
                 %>
               </div>
             <% end %>
-          </button>
+          <% end %>
+           <% if current_user.id == @user.id %>
+              <div class="actions">
+                <%= link_to '編集',
+                            edit_profile_path,
+                            style: "color:#FFF;",
+                            class:"btn btn-primary followbtn"
+                %>
+              </div>
+          <% end %>
         </div>
       </div>
     </div>
