画像の拡張子を固定

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -110,7 +110,7 @@
 </header>
 <main>
 <!-- ここに追加 -->
-  <div class="flash">
+  <div class="flash text-center">
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
   </div>
