--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -108,8 +108,7 @@
               <%= f.hidden_field :confirmation_token %>
               <hr class="my-4">
             <% end %>
-
-            <%= f.submit "登録",class:"w-100 btn btn-primary btn-lg mb-5"%>
+            <%= f.submit "変更",class:"w-100 btn btn-primary btn-lg mb-5"%>
           </div>
         </div>
       </div>
@@ -127,7 +126,7 @@
               <h4 class="modal-text">画像を選択してください</h4>
               <div class="form_wrapper">
                 <div id="image-wrapper">
-                  <%= f.file_field :images, id: "trim_img_uploder", value: "assets/default" %>
+                  <%= f.file_field :images, id: "trim_img_uploder", value: "assets/default",accept: 'image/jpg,image/jpeg,image/png' %>
                   <%= f.hidden_field :image, id: "image" %>
                   <%= f.hidden_field :image_x, id: "image_x" %>
                   <%= f.hidden_field :image_y, id: "image_y" %>
