左（友だち）完成進捗90%

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -206,7 +206,7 @@
                     </p>
                   </div>
                   <div style="padding-top: 19px; color: #007bff;">
-                        <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
                   </div>
               </div>
             </div>
@@ -222,7 +222,7 @@
           </p>
         </div>
         <div style="padding-top: 19px; color: #007bff;">
-          <i class="fas fa-star"></i>
+          <i class="far fa-star"></i>
         </div>
       </div>
     </div>
